Compress: Slide: Move SKB allocation out of driver
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -435,8 +435,7 @@ Two talks about AF_XDP at LPC:
 
 * Slide: Move SKB allocation out of driver                         :export:
 
-Long term goal:
- - Write NIC driver(s) without SKB allocations
+Long term goal: Write /NIC driver(s) without SKB allocations/
 
 Not alloc SKB in driver at RX: Is supported today via XDP_REDIRECT
  - Via redirect into CPU-map or tun-driver
@@ -444,7 +443,6 @@ Not alloc SKB in driver at RX: Is supported today via XDP_REDIRECT
 Missing part: driver offloads (e.g. csum-info, rxhash, HW-mark)
  - Depends/waits on metadata, in a vendor neutral way
  - We (also) need core-netstack to understand metadata BTF struct
-   - Not just BPF progs
 
 Hope this will be resolved covered in talk:
  - Talk: "XDP acceleration using NIC metadata, continued"
