Rewording Slide: Move SKB allocation out of driver
But not really happy with this, Toke is likely better at rewording

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -437,8 +437,8 @@ Two talks about AF_XDP at LPC:
 
 Long term goal: Write /NIC driver(s) without SKB allocations/
 
-Not alloc SKB in driver at RX: Is supported today via XDP_REDIRECT
- - Via redirect into CPU-map or tun-driver
+Actually supported today! -- avoiding alloc SKB in driver
+ - Via XDP_REDIRECT into CPU-map or tun-driver
 
 Missing part: driver offloads (e.g. csum-info, rxhash, HW-mark)
  - Depends/waits on metadata, in a vendor neutral way
