Minor change: Avoid LPC '18 got linewrapped.
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
+++ b/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
@@ -76,7 +76,7 @@ feedback on some of the future directions we see as beneficial for XDP.
 To provide some context to the discussion of future directions, we first look at
 some of the work that is currently ongoing. We do this in the form of an
 overview of the other XDP-related talk and topics that will be covered at the
-networking track at LPC '18. Those topics will not be covered in detail in this
+networking track at LPC\,'18. Those topics will not be covered in detail in this
 work, but we provide a short summary of each, with references to the other
 talks. This is the topic of Section~\ref{sec:current}.
 
