--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -433,7 +433,7 @@ Two talks about AF_XDP at LPC:
    (e.g. csum-info, rxhash, HW-mark) in a vendor neutral and generic way.  This
    depends/waits on metadata talk, for this to be generic enough.
 
-* Slide: Move SKB allocation out of driver                         :export:
+* Slide: Move SKB allocation out of drivers                          :export:
 
 Long term goal: /Remove need for SKB allocations in NIC drivers/
 
@@ -525,7 +525,7 @@ Original goal of not exposing feature-bits to userspace, was to force full
 support for XDP in all drivers.  Is this goal still realistic, after X kernel
 releases, where only 3 HW-drivers have implemented XDP_REDIRECT.
 
-* Slide: What does XDP driver support?                             :export:
+* Slide: What does an XDP driver support?                            :export:
 
 Userspace cannot query which XDP features a driver supports
 
