--- a/conference/LinuxPlumbers2018/xdp-future.bib
+++ b/conference/LinuxPlumbers2018/xdp-future.bib
@@ -85,3 +85,21 @@ year={2018}
   booktitle = {Linux Plumbers Conference 2018 Networking Track},
   year = 2018,
 }
+
+@inproceedings{NDP,
+ author = {Handley, Mark and Raiciu, Costin and Agache, Alexandru and Voinescu, Andrei and Moore, Andrew W. and Antichi, Gianni and W\'{o}jcik, Marcin},
+ title = {Re-architecting Datacenter Networks and Stacks for Low Latency and High Performance},
+ booktitle = {Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
+ series = {SIGCOMM '17},
+ year = {2017},
+ isbn = {978-1-4503-4653-5},
+ location = {Los Angeles, CA, USA},
+ pages = {29--42},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/3098822.3098825},
+ doi = {10.1145/3098822.3098825},
+ acmid = {3098825},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Datacenters, Network Stacks, Transport Protocols},
+}
