--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -52,7 +52,11 @@ the 'node' command.
 
  $ node ~/git/decktape/decktape.js presentation-lpc2018-xdp-future.html slides.pdf
 
-And it worked.
+This is the command needed on Arch - size is set to get slide text to fit on
+the page. -p 100 makes it go faster.
+
+$ decktape -s 1600x900 -p 100 --chrome-arg=--no-sandbox presentation-lpc2018-xdp-future.html presentation-lpc2018-xdp-future.pdf
+
 
 * Homepage abstract for presentation
 
